--- a/urbanstory/pages/style/icons.html
+++ b/urbanstory/pages/style/icons.html
@@ -408,14 +408,14 @@
           <input type="text" readonly="readonly" value="\e03f">
         </li>
         <li>
-          <div class="icon icon-elipsis-horizontal"></div>
-          <input type="text" readonly="readonly" value="elipsis-horizontal">
+          <div class="icon icon-ellipsis-horizontal"></div>
+          <input type="text" readonly="readonly" value="ellipsis-horizontal">
           <input type="text" readonly="readonly" value="&amp;#xe040;">
           <input type="text" readonly="readonly" value="\e040">
         </li>
         <li>
-          <div class="icon icon-elipsis-vertical"></div>
-          <input type="text" readonly="readonly" value="elipsis-vertical">
+          <div class="icon icon-ellipsis-vertical"></div>
+          <input type="text" readonly="readonly" value="ellipsis-vertical">
           <input type="text" readonly="readonly" value="&amp;#xe041;">
           <input type="text" readonly="readonly" value="\e041">
         </li>
