--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    /*test*/
   }</style><script>/* globals window */
   /* eslint-disable no-underscore-dangle */
   try {
