--- a/urbanstory/pages/cards/card.html
+++ b/urbanstory/pages/cards/card.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<section class="page-hero">
-		<h1>Cardbase</h1>
+		<h1>Card Base</h1>
 	</section>
 	<section>
 		<div class="row center-xs">
@@ -27,5 +27,32 @@
         &lt;div class=&quot;card depth-2 card-base&quot;&gt;Card depth-2&lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;</code></pre>
+	</section>
+	<section>
+		<h4>CSS class options</h4>
+		<table class="align-left">
+			<thead>
+				<tr>
+					<th>Class name</th>
+					<th>Additional class</th>
+					<th>Description</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td rowspan="3" valign="top"><p><code>.card</code></p></td>
+					<td><p>-</p></td>
+					<td><p>Default</p></td>
+				</tr>
+				<tr>
+					<td><p><code>.depth-1</code></p></td>
+					<td><p>Deepnes of shadow level 1</p></td>
+				</tr>
+				<tr>
+					<td><p><code>.depth-2</code></p></td>
+					<td><p>Deepnes of shadow level 2</p></td>
+				</tr>
+			</tbody>
+		</table>
 	</section>
 </div>
