set API to staging

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	}
 	function getAuth($email, $username){
 		
-		let url = "http://api.urbanhire.local:6789/v1/users/login"
+		let url = "http://api.urbanhire.co:6789/v1/users/login"
 		$.ajax({
 			type: 'POST',
 			url: url,
