--- a/urbanstory/pages/forms/form.html
+++ b/urbanstory/pages/forms/form.html
@@ -65,4 +65,136 @@
     &lt;label&gt;Success message&lt;/label&gt;
 &lt;/div&gt;</code></pre>
     </section>
+    <section>
+        <h4>SCSS</h4>
+        <pre><code>// forms
+textarea,
+input[type=&quot;text&quot;],
+input[type=&quot;password&quot;],
+input[type=&quot;email&quot;],
+input[type=&quot;search&quot;],
+select {
+    @extend .transition;
+    outline: none;
+    border: solid 1px $c-grey-3;
+    line-height: 40px;
+    font-size: 14px;
+    padding: 0 $gutter-m;
+    // background:;
+    @include radius;
+    &amp;:focus {
+        @include box-shadow(0 0 0 3px rgba(black, 0.15));
+    }
+    &amp;[disabled] {
+        border: solid 1px $c-grey-2;
+        cursor: not-allowed;
+    }
+}
+
+select {
+    height: 40px;
+    width: 100%;
+    background: white;
+}
+
+.input-form {
+    label:first-of-type {
+        display: block;
+        font-size: (14/16) + rem;
+        margin-bottom: $gutter-m;
+        margin-top: $gutter-l;
+    }
+    &amp;.width-auto {
+        textarea,
+        input,
+        select {
+            width: auto;
+        }
+    }
+    textarea {
+        resize: vertical;
+        overflow: auto;
+        line-height: 1rem;
+        padding: $gutter-m;
+        min-height: 64px;
+    }
+    textarea,
+    input,
+    select {
+        width: 100%;
+        &amp; + label {
+            display: block;
+            color: $c-grey-4;
+            font-size: (12/16) + rem;
+            margin-top: $gutter-s;
+        }
+    }
+    &amp;.is-danger {
+        label {
+            color: $c-red-1;
+        }
+        select,
+        textarea,
+        input[type=&quot;text&quot;],
+        input[type=&quot;password&quot;],
+        input[type=&quot;email&quot;],
+        input[type=&quot;search&quot;] {
+            border: solid 1px $c-red-1;
+            &amp;:focus {
+                @include box-shadow(0 0 0 3px rgba($c-red-1, 0.15));
+            }
+        }
+    }
+    &amp;.is-warning {
+        label {
+            color: $c-yellow-1;
+        }
+        select,
+        textarea,
+        input[type=&quot;text&quot;],
+        input[type=&quot;password&quot;],
+        input[type=&quot;email&quot;],
+        input[type=&quot;search&quot;] {
+            border: solid 1px $c-yellow-1;
+            &amp;:focus {
+                @include box-shadow(0 0 0 3px rgba($c-yellow-1, 0.15));
+            }
+        }
+    }
+    &amp;.is-success {
+        label {
+            color: $c-green-1;
+        }
+        select,
+        textarea,
+        input[type=&quot;text&quot;],
+        input[type=&quot;password&quot;],
+        input[type=&quot;email&quot;],
+        input[type=&quot;search&quot;] {
+            border: solid 1px $c-green-1;
+            &amp;:focus {
+                @include box-shadow(0 0 0 3px rgba($c-green-1, 0.15));
+            }
+        }
+    }
+    &amp;.is-info {
+        label {
+            color: $c-median-1;
+        }
+        select,
+        textarea,
+        input[type=&quot;text&quot;],
+        input[type=&quot;password&quot;],
+        input[type=&quot;email&quot;],
+        input[type=&quot;search&quot;] {
+            border: solid 1px $c-median-1;
+            &amp;:focus {
+                @include box-shadow(0 0 0 3px rgba($c-median-1, 0.15));
+            }
+        }
+    }
+}
+
+// checkbox &amp; radio</code></pre>
+    </section>
 </div>
