--- a/urbanstory/pages/style/typography.html
+++ b/urbanstory/pages/style/typography.html
@@ -10,18 +10,24 @@
 		</div>
 	</section>
 	<section>
-		<h4>Primary Typeface</h4>
+		<p>Heading Typeface</p>
+			<h3>Barlow</h3>
+			<br>
+		<p>Body Typeface</p>
+			<p class="text-l" style="font-size: 24px;">Source Sans</p>
+	</section>
+	<section>
 		<h2>Barlow</h2>
 		<h5>Characters</h5>
 		<p class="text-giant">Bb</p>
 		<p class="characters">A B C Č Ć D Đ E F G H I J K L M N O P Q R S Š T U V W X Y Z Ž a b c č ć d đ e f g h i j k l m n o p q r s š t u v w x y z ž Ă Â Ê Ô Ơ Ư ă â ê ô ơ ư 1 2 3 4 5 6 7 8 9 0 ‘ ? ’ “ ! ” ( % ) [ # ] { @ } / & \ < - + ÷ × = > ® © $ € £ ¥ ¢ : ; , . *</p>
 		<h5>Font Styles</h5>
 		<p>Regular</p>
-		<p class="font-italic">Regular Italic</p>
+		<!-- <p class="font-italic">Regular Italic</p> -->
 		<p class="font-semibold">Semi-Bold</p>
-		<p class="font-semibold-italic">Semi-Bold Italic</p>
+		<!-- <p class="font-semibold-italic">Semi-Bold Italic</p>
 		<p class="font-bold">Bold</p>
-		<p class="font-bold-italic">Bold Italic</p>
+		<p class="font-bold-italic">Bold Italic</p> -->
 	</section>
 	<section>
 		<h4>Text Sizes</h4>
