--- a/urbanstory/pages/cards/card.html
+++ b/urbanstory/pages/cards/card.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<section class="page-hero">
-		<h1>Card Base _</h1>
+		<h1>Card Base</h1>
 	</section>
 	<section>
 		<div class="row center-xs">
@@ -46,11 +46,11 @@
 				</tr>
 				<tr>
 					<td><p><code>.depth-1</code></p></td>
-					<td><p>Deepnes of shadow level 1</p></td>
+					<td><p>Deepness of shadow level 1</p></td>
 				</tr>
 				<tr>
 					<td><p><code>.depth-2</code></p></td>
-					<td><p>Deepnes of shadow level 2</p></td>
+					<td><p>Deepness of shadow level 2</p></td>
 				</tr>
 			</tbody>
 		</table>
