Underlined active page

--- a/urbanstory/pages/elements/ats-header.html
+++ b/urbanstory/pages/elements/ats-header.html
@@ -39,6 +39,78 @@
             </li>
           </ul>
         </div>
+        <!-- <div class="ats-menu-wrapper">
+          <ul>
+            <li class="pad-l-md wrapper-xs pad-b-none m-t-sm">
+              <span class="thumb-xxs avatar pos-rlt v-middle">
+                <img src="https://cdn-assets-1.urbanhire.com/users/profile/bd03a0c02bb1212e3490b8a4e2e91b8723bcedd3-thumb.png" onerror="this.onerror=null;this.src='https://cdn-assets-1.urbanhire.com/assets/default-user-avatar-thumb.png';" height="25" class="img-center-absolute img-lazy">
+              </span>
+              <h6 class="m-l-xs m-t-none m-b-none text-light text-c-l text-normal f-normal inline v-middle max-width-70 text-ellipsis">Hengki - (admin)</h6>
+            </li>
+            <li class="wrapper-xs pad-l-md">
+              <span class="block f-bold text-c-l text-dark text-14all lh-normal">Karejo</span>
+              <span class="text-c-l text-green-light lh-normal">trial - monthly</span>
+            </li>
+            <li class="b-b"></li>
+            <li><a href="">Dashboard</a></li>
+            <li><a href="">Applicants</a></li>
+            <li><a href="">Reports</a></li>
+            <li><a href="">Referal</a></li>
+            <li><a href="">Resume Search</a></li>
+            <li class="b-b"></li>
+            <li class="active pad-l-md wrapper-square-xxs">
+              <div class="clickable panel-collapsed wrapper-xs pad-l-n cursors text-md">
+                <i class="media-xxxs icon icon-company text-gray"></i>
+                <span class="f-bold">&nbsp; Company </span>
+                <i class="collapse-icon pull-right media-xxxs icon icon-angle-down text-gray"></i>
+              </div>
+              <ul class="pad-l-n collapsein none">
+                <li class="pad-l-n wrapper-sm user-nav text-14 lh-normal">
+                  <a href="/account/company" title="Edit Company Profile">
+                    <span>General Information</span>
+                  </a>
+                </li>
+                <li class="pad-l-n wrapper-sm user-nav text-14 lh-normal">
+                  <a href="/account/manage-companies" data-id="56e143cfb11b553c491cffcf" title="Manage your companies">
+                    <span>Manage Companies</span>
+                  </a>
+                </li>
+                <li class="pad-l-n wrapper-sm user-nav text-14 lh-normal">
+                  <a href="/account/career-page" target="_blank" title="Edit company career page">
+                    <span>Career's Page Editor</span>
+                  </a>
+                </li>
+                <li class="pad-l-n wrapper-sm user-nav text-14 lh-normal">
+                  <a href="/account/user-role" title="Manage user roles of the company">
+                    <span>User Role</span>
+                  </a>
+                </li>
+                <li class="pad-l-n wrapper-sm user-nav text-14 lh-normal">
+                  <a href="/account/account-member" title="Add and remove your team member">
+                    <span>Team Member</span>
+                  </a>
+                </li>
+                <li class="pad-l-n wrapper-sm user-nav text-14 lh-normal">
+                  <a href="/account/hiring-plan" title="Custom your company hiring plan">
+                    <span>Hiring Stages</span>
+                  </a>
+                </li>
+                <li class="pad-l-n wrapper-sm user-nav text-14 lh-normal">
+                  <a href="/account/blacklist-applicants" title="Add and remove your blacklisted Applicants">
+                    <span>Blacklist Applicants</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="active pad-l-md wrapper-square-xxs"><div class="clickable panel-collapsed wrapper-xs pad-l-n cursors text-md"><i class="media-xxxs icon icon-documents text-gray"></i><span class="f-bold">&nbsp; Templates</span><i class="collapse-icon pull-right media-xxxs icon icon-angle-down text-gray"></i></div><ul class="pad-l-n collapsein none"><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/recruiting" title="Mange your hiring company email template"><span>Email</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/preassessment-templates" title="Mange your Pre-Assessment template"><span>Pre Assessment</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/basic-assessment-templates" title="Mange your Basic-Assessment template"><span>Basic Assessment</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/template-interview-form" title="Mange your Interview template"><span>Interview Form</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/feedback-form" title="Mange your feedback user"><span>Feedback Form</span></a></li></ul></li>
+            <li class="active pad-l-md wrapper-square-xxs"><div class="clickable panel-collapsed wrapper-xs pad-l-n cursors text-md"><i class="media-xxxs icon icon-credit-card text-gray"></i><span class="f-bold">&nbsp; Payment</span><i class="collapse-icon pull-right media-xxxs icon icon-angle-down text-gray"></i></div><ul class="pad-l-n collapsein none"><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal active"><a href="/account/subscription-plan" title="Update your subscription plan"><span>Subscription &amp; Coins</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/billing" title="Review your billing information"><span>Billing Information</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/history" title="Review your billing history"><span>Billing History</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/coin-history" title="Check coin history"><span>Coin History</span></a></li></ul></li>
+            <li class="active pad-l-md wrapper-square-xxs"><div class="clickable wrapper-xs pad-l-n cursors text-md panel-collapsed"><i class="media-xxxs icon icon-user text-gray"></i><span class="f-bold">&nbsp; My Account</span><i class="collapse-icon pull-right media-xxxs icon text-gray icon-angle-down"></i></div><ul class="pad-l-n collapsein none" style="display: none;"><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/profile" data-id="56e143cfb11b553c491cffcf" title="Update your personal profile"><span>Profile</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/email-social-media" data-id="56e143cfb11b553c491cffcf" title="Update your email and social media"><span>Email and Social Media</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/password" data-id="56e143cfb11b553c491cffcf" title="Update your password"><span>Password</span></a></li></ul></li>
+            <li class="active pad-l-md wrapper-square-xxs"><div class="clickable wrapper-xs pad-l-n cursors text-md panel-collapsed"><i class="media-xxxs icon icon-puzzle text-gray"></i><span class="f-bold">&nbsp; Integration</span><i class="collapse-icon pull-right media-xxxs icon text-gray icon-angle-down"></i></div><ul class="pad-l-n collapsein none" style="display: none;"><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/integration#UrbanhireWidgets" data-id="56e143cfb11b553c491cffcf" title="Manage your job widgets"><span>Urbanhire Jobs Widget</span></a></li><li class="pad-l-n wrapper-sm user-nav text-14 lh-normal"><a href="/account/integration#listIntegration" data-id="56e143cfb11b553c491cffcf" title="Manage your job widgets"><span>HR Information System</span></a></li></ul></li>
+            <li class="pad-l-md wrapper-square-xxs f-bold text-md user-nav m-t-sm"><a href="https://resources.urbanhire.com/" target="_blank" title="Urbanhire resources"><i class="media-xxxs icon icon-book text-gray"></i><span>&nbsp; Resources</span></a></li>
+            <li class="divider m-t-xs m-b-xs b-b"></li>
+            <li class="pad-l-md wrapper-sm f-bold text-md"><a href="/logout" class="btn-logout f-bold text-red"><i class="f-bold icon icon-switch-off"></i><span>&nbsp; Logout</span></a></li>
+          </ul>
+        </div> -->
       </nav>
     </header>
   </section>
