--- a/urbanstory/pages/elements/ats-header.html
+++ b/urbanstory/pages/elements/ats-header.html
@@ -26,15 +26,15 @@
                 <li><a href="#coin-history">Coin History</a></li>
               </ul>
             </li>
-            <li class="menu-icon"><a  href="#agenda"><i class="icon-calendar-2"></i></a></li>
-            <li class="menu-icon"><a  href="#notification"><i class="icon-notification"></i></a></li>
+            <li class="has-icon">
+              <a  href="#agenda"><i class="icon-calendar-2"></i></a></li>
+            <li class="has-icon">
+              <a  href="#notification"><i class="icon-notification"></i></a></li>
             <li>
               <i class="icon-company"></i>
               <span class="company-name">PT Urban Teknologi didnkeNJNDNdnd[nx[dcdalnc;NC;Nc;nc'nwenec</span>
             </li>
-            <li class="ats-menu-button">
-                <span></span>
-                <span></span>
+            <li class="menu-drawer">
                 <span></span>
             </li>
           </ul>
