--- a/urbanstory/pages/elements/ats-header.html
+++ b/urbanstory/pages/elements/ats-header.html
@@ -30,12 +30,14 @@
               <a  href="#agenda"><i class="icon-calendar-2"></i></a></li>
             <li class="has-icon">
               <a  href="#notification"><i class="icon-notification"></i></a></li>
-            <li>
-              <i class="icon-company"></i>
-              <span class="company-name">PT Urban Teknologi didnkeNJNDNdnd[nx[dcdalnc;NC;Nc;nc'nwenec</span>
+            <li class="ats-company">
+              <a>
+                <i class="icon-company"></i>
+                <span class="company-name">PT Urban Teknologi didnkeNJNDNdnd[nx[dcdalnc;NC;Nc;nc'nwenec</span>
+              </a>
             </li>
             <li class="menu-drawer">
-                <span></span>
+                <!-- <span></span> -->
             </li>
           </ul>
         </div>
