--- a/urbanstory/pages/elements/ats-header.html
+++ b/urbanstory/pages/elements/ats-header.html
@@ -27,7 +27,8 @@
               </ul>
             </li>
             <li class="has-icon">
-              <a  href="#agenda"><i class="icon-calendar-2"></i></a></li>
+              <a href="#agenda"><i class="icon-calendar-2"></i></a>
+            </li>
             <li class="has-icon">
               <a  href="#notification"><i class="icon-notification"></i></a></li>
             <li class="ats-company">
