--- a/urbanstory/.storybook/preview-head.html
+++ b/urbanstory/.storybook/preview-head.html
@@ -1,6 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,600,600i,700,700i" rel="stylesheet" />
-<!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i&display=swap" rel="stylesheet"> -->
-<!-- <link rel="stylesheet" type="text/css" href="https://uh-font-cdn.urbanhire.com/uh-font.min.css"> -->
+<link href="https://fonts.googleapis.com/css?family=Barlow:400,600|Source+Sans+Pro:400,400i,700,700i&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://uh-font-cdn.urbanhire.com/uh-font-staging.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
