fixin docs code

--- a/iframe.html
+++ b/iframe.html
@@ -58,7 +58,7 @@
   } catch (e) {
     // eslint-disable-next-line no-console
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script><link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,600,600i,700,700i" rel="stylesheet"><link rel="stylesheet" href="https://uh-font-cdn.urbanhire.com/uh-font-staging.min.css"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script><script>$(document).ready(function () {
+  }</script><link href="https://fonts.googleapis.com/css?family=Barlow:400,600|Source+Sans+Pro:400,400i,700,700i&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://uh-font-cdn.urbanhire.com/uh-font-staging.min.css"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script><script>$(document).ready(function () {
 
         // function for Components > List
         var listCheck = function(){
@@ -161,4 +161,4 @@
         #011148 ${upperValue}%,
         #d6d6d6 ${upperValue}%,
         #d6d6d6 100%`;
-    }</script></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><script src="runtime~main.c6b5422884e7ec387034.bundle.js"></script><script src="vendors~main.c6b5422884e7ec387034.bundle.js"></script><script src="main.c6b5422884e7ec387034.bundle.js"></script></body></html>
+    }</script></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the Storybook config.</li><li>Try reloading the page.</li></ul><p>If the problem persists, check the browser console, or the terminal you've run Storybook from.</p></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code"><code id="error-stack"></code></pre></div><div id="root"></div><script src="runtime~main.66d0005693a7328ad8cb.bundle.js"></script><script src="vendors~main.66d0005693a7328ad8cb.bundle.js"></script><script src="main.66d0005693a7328ad8cb.bundle.js"></script></body></html>
