Fixing styling for logo

--- a/urbanstory/pages/elements/ats-header.html
+++ b/urbanstory/pages/elements/ats-header.html
@@ -4,7 +4,7 @@
   </section>
   <section>
     <header class="card-header flex"> 
-      <a href=""><img class="ats-logo" src="https://winter-cdn.urbanhire.com/img/logo.svg" alt="Urbanhire"></a> 
+      <a href="" class="ats-logo"><img src="https://winter-cdn.urbanhire.com/img/logo.svg" alt="Urbanhire"></a> 
       <nav class="ats-nav-content">
         <div class="left-side">
           <ul>
